ODE CHANGELOG
-------------

the rules for this file:
  * entries are sorted newest-first.
  * summarize sets of changes - dont reproduce every CVS log comment here.
  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format).

------------------------------------------------------------------------------
12/06/08 Oleh Derevenko

       * Applied a patch by Martijn Buijs to make GIMPACT trimesh-ray collisions to
         be consistent with those in OPCODE.
       * Swapped geometries returned in contacts for OPCODE Trimesh-Plane collisions
         as they were returned in unnatural order being different from that in GIMPACT
       * Applied a patch by Martijn Buijs to make side1, side2 fields of contact 
         structure be always initialized, either with -1 for non-trmesh geometries
         or with triangle index for trimeshes. These fields were only assigned for
         trimesh-trimesh collisions before.
       * dGeomTriMeshSetTriMergeCallback/dGeomTriMeshGetTriMergeCallback API added
         to set/get user defined callback procedure for trimeshes that would be 
         invoked when contacts are merged to let user code accumulate attributes of
         original contact triangles and generate a fake index by which it would 
         later be able to determine those attributes. If the callback is not 
         assigned (the default) -1 is generated as triangle index for merged 
         contacts (there was an index of first of merged triangles before!!!).
         The callback is currently used within OPCODE trimesh-sphere and OPCODE
         new trimesh-trimesh collisions.

11/20/08 Remi Ricard (papaDoc)
       * Fix problem with dJointGetPUPosition and
         dJointGetPUPositionRate when the joint is attached to only
         a body 2. The sign was inverted.
       * Fix bug: When a pu joint had only one body attached to position 2,
         dJointAttach(jId, 0, bId). The body was not push in the right direction to